--- a/package.json
+++ b/package.json
@@ -7,5 +7,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "publishConfig": {
+    "@mygreatworkstu:registry": "https://npm.pkg.github.com"
+  }
 }
