--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "npm_github_package",
+  "name": "@mygreatworkstu/npm_github_package",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
