--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  // 发布到github必须添加：@mygreatworkstu/
   "name": "@mygreatworkstu/npm_github_package",
   "version": "1.0.0",
   "main": "index.js",
@@ -8,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  // 发布到github
   "publishConfig": {
     "@mygreatworkstu:registry": "https://npm.pkg.github.com"
   }
